k8s/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: cookbookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: auth
          image: walaska/cookbookapp:auth
          ports:
            - containerPort: 4000
