k8s/auth/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: cookbookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /etc/phpmyadmin
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: phpmyadmin-data
